tests/ui/pyclass_generic_enum.stderr
error: enums do not support #[pyclass(generic)]
 --> tests/ui/pyclass_generic_enum.rs:3:11
  |
3 | #[pyclass(generic)]
  |           ^^^^^^^

error: enums do not support #[pyclass(generic)]
  --> tests/ui/pyclass_generic_enum.rs:10:11
   |
10 | #[pyclass(generic)]
   |           ^^^^^^^

error: aborting due to 2 previous errors

